[package]
name = "sui-event-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures-util = "0.3.32"
prost-types = "0.14.3"
sui-rpc = "0.2.2"
sui-sdk-types = "0.2.2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
